--- a/home.html
+++ b/home.html
@@ -4,30 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe - Media Hub</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Estilos customizados para simular wireframe */
-        .wireframe-box {
-            background-color: #f3f4f6;
-            border: 2px dashed #9ca3af;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #6b7280;
-            transition: all 0.3s ease;
-        }
-        .wireframe-box:hover {
-            border-color: #4b5563;
-            background-color: #e5e7eb;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/HomeCustom.css">
+
 </head>
 <body class="bg-white font-sans text-gray-900">
 
     <!-- Header / Navegação -->
     <header class="border-b border-gray-200 sticky top-0 bg-white z-50">
         <div class="container mx-auto px-4 h-16 flex items-center justify-between">
-            <div class="text-2xl font-bold tracking-tighter">MEDIA HUB</div>
+            <div class="text-2xl font-bold tracking-tighter">Universe Tech Geek</div>
             
             <nav class="hidden md:flex space-x-8 font-medium text-sm uppercase tracking-wide">
                 <a href="#books" class="hover:text-blue-600">Books</a>
@@ -75,7 +60,7 @@
                     <h2 class="text-3xl font-bold">Books</h2>
                     <p class="text-gray-500">Mais lidos e novos lançamentos literários</p>
                 </div>
-                <a href="#" class="text-blue-600 font-semibold hover:underline">Ver todos &rarr;</a>
+                <a href="pages/books.html" class="text-blue-600 font-semibold hover:underline">Ver todos &rarr;</a>
             </div>
             <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6">
                 <!-- Book Item -->
