added some book images

--- a/pages/books.html
+++ b/pages/books.html
@@ -10,6 +10,7 @@
  
 <body class="bg-white font-sans text-gray-900">
  <!-- Split-screen Books Section -->
+    
     <main class="container mx-auto px-8 py-12">
         <section id="books" class="flex gap-8" style="min-height:500px;">
             <!-- Left Panel: Book List -->
@@ -21,19 +22,47 @@
                     </div>
                     <a href="../home.html" class="text-blue-600 font-semibold hover:underline">Back &rarr;</a>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6" id="book-list">
+                <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-8 gap-6" id="book-list">
                     <!-- Book Item Example -->
-                    <div class="space-y-3 cursor-pointer book-item" data-cover="../assets/img/42844155.jpg" data-title="Harry Potter and the Philosopher's Stone " data-author="J.K Rowling" data-desc="When a letter arrives for unhappy but ordinary Harry Potter, a decade-old secret is revealed to him. His parents were wizards, killed by a Dark Lord’s curse when Harry was just a baby, and which he somehow survived. Escaping from his unbearable Muggle guardians to Hogwarts, a wizarding school brimming with ghosts and enchantments, Harry stumbles into a sinister adventure when he finds a three- headed dog guarding a room on the third floor. Then he hears of a missing stone with astonishing powers which could be valuable, dangerous, or both.">
+                    <div class="space-y-3 cursor-pointer book-item" data-cover="../assets/img/HP1.jpg" data-title="Harry Potter and the Philosopher's Stone " data-author="J.K Rowling" data-desc="When a letter arrives for unhappy but ordinary Harry Potter, a decade-old secret is revealed to him. His parents were wizards, killed by a Dark Lord’s curse when Harry was just a baby, and which he somehow survived. Escaping from his unbearable Muggle guardians to Hogwarts, a wizarding school brimming with ghosts and enchantments, Harry stumbles into a sinister adventure when he finds a three- headed dog guarding a room on the third floor. Then he hears of a missing stone with astonishing powers which could be valuable, dangerous, or both.">
                         <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
                         <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
                         <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
                     </div>
-                    <div class="space-y-3 cursor-pointer book-item" data-title="Book Title 2" data-author="Author 2" data-desc="Descrição do Livro 2">
+                    <div class="space-y-3 cursor-pointer book-item" data-cover= "../assets/img/TheSilentForest.jpg" data-title="The Silent Forest" data-author="Emily Harper" data-desc="A gripping mystery about a journalist who uncovers dark secrets hidden deep within a remote woodland town.">
+
                         <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
                         <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
                         <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
                     </div>
-                    <div class="space-y-3 cursor-pointer book-item" data-title="Book Title 3" data-author="Author 3" data-desc="Descrição do Livro 3">
+                    <div class="space-y-3 cursor-pointer book-item" data-cover="../assets/img/BeyondtheHorizon.jpg" data-title="Beyond the Horizon" data-author="Daniel Brooks" data-desc="An inspiring adventure following a young explorer determined to sail across the world and discover uncharted lands.">
+                        <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
+                        <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
+                        <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
+                    </div>
+                    <div class="space-y-3 cursor-pointer book-item" data-cover="../assets/img/WhispersOfThePast.jpg" data-title="Whispers of the Past" data-author="Sophia Bennett" data-desc="A historical drama that intertwines two generations of women connected by love, loss, and an old family secret.">
+
+                        <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
+                        <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
+                        <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
+                    </div>
+                    <div class="space-y-3 cursor-pointer book-item" data-cover="" data-title="Digital Empire" data-author="Marcus Reed" data-desc="A fast-paced tech thriller about ambition, innovation, and the hidden dangers behind a billion-dollar startup.">
+
+                        <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
+                        <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
+                        <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
+                    </div>
+                     <div class="space-y-3 cursor-pointer book-item" data-title="Book Title 3" data-author="Author 3" data-desc="Descrição do Livro 3">
+                        <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
+                        <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
+                        <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
+                    </div>
+                     <div class="space-y-3 cursor-pointer book-item" data-title="Book Title 3" data-author="Author 3" data-desc="Descrição do Livro 3">
+                        <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
+                        <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
+                        <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
+                    </div>
+                     <div class="space-y-3 cursor-pointer book-item" data-title="Book Title 3" data-author="Author 3" data-desc="Descrição do Livro 3">
                         <div class="aspect-[2/3] wireframe-box rounded-md shadow-sm">[Capa do Livro]</div>
                         <div class="h-4 w-3/4 bg-gray-200 rounded"></div>
                         <div class="h-3 w-1/2 bg-gray-100 rounded"></div>
@@ -41,16 +70,16 @@
                     <!-- Add more book items as needed -->
                 </div>
             </div>
+            
             <!-- Right Panel: Book Details -->
-            <div class="flex-1 pl-8" id="book-details-panel">
-                <div class="bg-gray-100 rounded-lg p-6 shadow-md h-full flex flex-col justify-center items-center border-2 border-yellow-500" id="book-details" style="min-height:300px;">
+            <div class="flex-1 pl-8 py-16 hidden" id="book-details-panel">
+                <div class="bg-gray-100 rounded-lg p-6 shadow-md h-full flex flex-col justify-center items-center" id="book-details" style="min-height:300px;">
                     <h3 class="text-2xl font-bold mb-2">Selecione um livro</h3>
                     <p class="text-gray-500">Clique em um livro à esquerda para ver detalhes.</p>
                 </div>
             </div>
         </section>
     </main>
-
-    <script src="../JS/book.js"></script>
+        <script src="../JS/book.js"></script>
 
 </body>
